--- a/styles/style.css
+++ b/styles/style.css
@@ -12,3 +12,27 @@
 .br-text{
     background-color: rgba(0, 0,0, 0.700);
 }
+.nav-link{
+    position: relative;
+}
+.nav-link::after{
+    content: "";
+    opacity: 0;
+    height: 2px;
+    width: 100%;
+    background-color: #36615d;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+}
+.nav-link:hover::after{
+    opacity: 1;
+}
+#span-bg span{
+    background: #1d4d49;
+}
